# python-todo-list-app

./: .gitignore  README.md  example_import.csv  main.py  models.py  pyproject.toml  run_tests.sh  setup.py  storage.py
tests/: test_storage.py
todo_app/: main.py  storage.py
