[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-todo-list-app"
version = "1.0.0"
description = "A fully featured command-line todo list manager with import/export, tags, priorities, and more."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
]

[project.scripts]
todo-app = "todo_app.main:main"

[tool.setuptools.packages.find]
where = ["todo_app"]
